--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "gulp serve"
+    "test": "jest",
+    "serve": "gulp serve",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@eslint/js": "^9.21.0",
+    "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.3",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "gulp": "^5.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-copy": "^5.0.0",
+    "gulp-prettier": "^6.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^6.0.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "sass": "^1.85.1",
     "webpack": "^5.98.0",
     "webpack-stream": "^7.0.0"
