--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "@eslint/js": "^9.21.0",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.3",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "gulp": "^5.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-copy": "^5.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-prettier": "^6.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^6.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "pug": "^3.0.3",
     "sass": "^1.85.1",
     "webpack": "^5.98.0",
     "webpack-stream": "^7.0.0"
